5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1800_2563.log
== TEST (2019-06-04 11:55:56) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
for i in range(size(v)):
	if(v[i]>=5 and (v[i]<7)):
		s=s+1
	v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:59:49) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1)
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
		v=array(eval(input("medias finais: ")))	
-- ERROR:
File "XXXX", line 4
    while(size(v)!=1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 11:59:59) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
		v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:58:48) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
		v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:59:52) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
		v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:02:37) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
		print(s)
		v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 16:03:37) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
		print(s)
		v=array(eval(input("medias finais: ")))	
-- EXECUTION TIME:
0.847281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 6, in <module>
    if(v[i]>=5 and (v[i]<7)):
IndexError: index 4 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:03:56) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
print(s)
		v=array(eval(input("medias finais: ")))	
-- ERROR:
File "XXXX", line 9
    v=array(eval(input()))	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:04:09) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	print(s)
		v=array(eval(input("medias finais: ")))	
-- ERROR:
File "XXXX", line 9
    v=array(eval(input()))	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:04:26) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
		print(s)
		v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:05:13) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	print(s)
		v=array(eval(input("medias finais: ")))	
-- ERROR:
File "XXXX", line 9
    v=array(eval(input()))	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:05:32) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	print(s)
	v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 16:05:44) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	print(s)
	v=array(eval(input("medias finais: ")))	
-- EXECUTION TIME:
1.06838
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
15
16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:05:46) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	print(s)
	v=array(eval(input("medias finais: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:07:21) 
-- CODE:
from numpy import*
v=array(eval(input(http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1800#profile-2563"medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	#print(s)
	v=array(eval(input("medias finais: ")))
	print(s)
-- ERROR:
File "XXXX", line 2
    v=array(eval(input(http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1800#profile-2563"medias finais: ")))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:07:34) 
-- CODE:
from numpy import*
v=array(eval(input(http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1800#profile-2563"medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	#print(s)
	v=array(eval(input("medias finais: ")))
	print(s)
-- ERROR:
File "XXXX", line 2
    v=array(eval(input(http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1800#profile-2563"medias finais: ")))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:08:23) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	#print(s)
	v=array(eval(input("medias finais: ")))
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 16:10:35) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s=s+1
	#print(s)
	v=array(eval(input("medias finais: ")))
	print(s)
-- EXECUTION TIME:
0.912621
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
15
16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:24:42) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s = s + v[i]
	#print(s)
	v=array(eval(input("medias finais: ")))
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:27:34) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
i=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
			s = s + i
	#print(s)
	v=array(eval(input("medias finais: ")))
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:31:51) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
i=0
while(size(v)!=1):
	if(v[i]>=5 and (v[i]<7)):
		s = s + 1
		i=i+1
	v=array(eval(input("medias finais: ")))
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:32:37) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
i=0
while(size(v)!=1):
	if(v[i]>=5 and (v[i]<7)):
		s = s + 1
		i=i+1
	v=array(eval(input("medias finais: ")))
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:33:33) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
i=0
while(size(v)!=1):
	if(v[i]>=5 and (v[i]<7)):
		s = s + 1
		i=i+1
	v=array(eval(input("medias finais: ")))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:36:05) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
i=0
while(size(v)!=1):
	if(v[i]>=5 and (v[i]<7)):
		s = s + 1
		#i=i+1
	v=array(eval(input("medias finais: ")))
print(s)
			i=i+1

-- ERROR:
File "XXXX", line 11
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:36:16) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
i=0
while(size(v)!=1):
	if(v[i]>=5 and (v[i]<7)):
		s = s + 1
		#i=i+1
	v=array(eval(input("medias finais: ")))
print(s)
		i=i+1

-- ERROR:
File "XXXX", line 11
    i=i+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:36:37) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
i=0
while(size(v)!=1):
	if(v[i]>=5 and (v[i]<7)):
		s = s + 1
		i=i+1
	v=array(eval(input("medias finais: ")))
print(s)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 16:48:39) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0

for i in range(size(v)):
	if(v[i]>=5 or (v[i]<7)):
		s = s + 1
		
	v=array(eval(input("medias finais: ")))
print(s)
		

-- EXECUTION TIME:
1.03309
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 6, in <module>
    if(v[i]>=5 or (v[i]<7)):
IndexError: index 4 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 16:50:10) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1)
	for i in range(size(v)):
		if(v[i]>=5 or (v[i]<7)):
		s = s + 1
		
	v=array(eval(input("medias finais: ")))
	print(s)
		

-- EXECUTION TIME:
0.891558
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 4
    while(size(v)!=1)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:50:56) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1)
	for i in range(size(v)):
		if(v[i]>=5 or (v[i]<7)):
		s = s + 1
		
	v=array(eval(input("medias finais: ")))
	print(s)
		

-- ERROR:
File "XXXX", line 4
    while(size(v)!=1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:51:06) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 or (v[i]<7)):
		s = s + 1
		
	v=array(eval(input("medias finais: ")))
	print(s)
		

-- ERROR:
File "XXXX", line 7
    s = s + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:51:38) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
s=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 or (v[i]<7)):
		s=s+1
		
	v=array(eval(input("medias finais: ")))
	print(s)
		

-- ERROR:
File "XXXX", line 7
    s=s+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:52:38) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 or (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:53:01) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)!=1):
	for i in range(size(v)):
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:54:00) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)!=1):
	for i in v:
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:54:04) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)!=1):
	for i in v:
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 16:54:28) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)!=1):
	for i in size(v):
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:16:45) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)!=1):
	for i in size(v):
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:31:44) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)!=1):
	for i in size(v):
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:01:52) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in size(v):
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- EXECUTION TIME:
0.876894
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 7
    a=a+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:02:16) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in v:
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- EXECUTION TIME:
0.474675
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 7
    a=a+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:02:21) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in v:
		if(v[i]>=5 and (v[i]<7)):
		a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
File "XXXX", line 7
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:02:43) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in v:
		if(v[i]>=5 and (v[i]<7)):
			a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- EXECUTION TIME:
1.20287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 6, in <module>
    if(v[i]>=5 and (v[i]<7)):
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:46) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in v:
		if(i>=5 and (i<7)):
			a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- EXECUTION TIME:
0.974695
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
15
16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:05:04) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in v:
		if(i>=5 and (i<7)):
			a=a+1
	v=array(eval(input("medias finais: ")))
	print(a)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:06:09) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in v:
		if(i>=5 and (i<7)):
			a=a+1
	#v=array(eval(input("medias finais: ")))
	print(a)
	v=array(eval(input("medias finais: ")))
		

-- EXECUTION TIME:
1.02828
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
medias finais: 6
medias finais: 6
medias finais: 9
medias finais: 10
medias finais:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
medias finais: 11
medias finais: 15
medias finais: 16
medias finais:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias finais: 5
medias finais: 8
medias finais:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:06:11) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))
a=0
while(size(v)>1):
	for i in v:
		if(i>=5 and (i<7)):
			a=a+1
	#v=array(eval(input("medias finais: ")))
	print(a)
	v=array(eval(input("medias finais: ")))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:07:00) 
-- CODE:
from numpy import*
v=array(eval(input("medias finais: ")))

while(size(v)>1):
	a=0
	for i in v:
		if(i>=5 and (i<7)):
			a=a+1
	#v=array(eval(input("medias finais: ")))
	print(a)
	v=array(eval(input("medias finais: ")))
		

-- EXECUTION TIME:
0.922853
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
